[ACC-2678] Add documentation for Content-Disposition header
